--- a/task2/client/src/components/NoteList.css
+++ b/task2/client/src/components/NoteList.css
@@ -20,6 +20,13 @@
   font-size: 1.5em;
 }
 
+.note__text {
+    background: transparent;
+    outline: none;
+    border: none;
+    padding: 1em 0.5em;
+}
+
 .note__button,
 .add-note__button {
   background-color: rgb(187, 255, 198);
